# ragwall

./: .gitignore  ACCOMPLISHMENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  index.html  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  run_tiny_sanitizer.sh
.github/: PULL_REQUEST_TEMPLATE.md
data/: corpus_injections.jsonl  health_corpus_quick.jsonl  health_corpus_small.jsonl  health_corpus_tiny.jsonl  health_eval_corpus.jsonl  health_eval_corpus_mixed.jsonl  health_queries.jsonl  health_queries_quick_sanitized.jsonl  health_queries_small_sanitized.jsonl  health_queries_tiny.jsonl  queries.jsonl  queries_sanitized.jsonl  rag_corpus_large.jsonl  synthea_corpus.jsonl
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_STRATEGY.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOMAIN_TOKENS.md  EVIDENCE_MAP_RAG_TESTS.md  FINE_TUNING_GUIDE.md  HEALTHCARE_RAG_ANALYSIS.md  INVESTMENT_VALIDATION_TEST_REPORT.md  OPEN_CORE_OVERVIEW.md  README.md  algo_overview.txt  api_test_report.md  article.md  community_overview.md  gtm_strategy.md  ragwall.tex  ragwall_detailed.txt  ragwall_overview.txt  working_config.md
enterprise/: conftest.py
examples/: integration_examples.py
execs/: run_all_tests.sh  run_example.sh  smoke_test.sh  verify_all_claims.sh
misc/: demonstrate_performance.py  download_models.py  quick_benchmark_comparison.py  run_all_benchmarks.py  run_injection_benchmarks.py  run_without_ml.py  simple_demonstration.py
patent/: provisional_patent.md
public/: article.md  index-v2.html  index.html  playground-v2.html  playground.html  ragwall-playground.js  ragwall_report.html  styles.css
sanitizer/: layered_defense.py  rag_sanitizer.py
scripts/: fine_tune_healthcare_model.sh  make_playground_examples.py  make_report_html.py  mock_api.py  serve_api.py
tests/: test_adversarial.py  test_adversarial_simple.py  test_api.py  test_combined_defense.py  test_competitor_hrcr.py  test_deepset_injections.py  test_domain_tokens copy.py  test_domain_tokens.py  test_ensemble_quick.py  test_healthcare_benchmark.py  test_healthcare_sota.py  test_hrcr.py  test_hrcr_enterprise.py  test_improved_detection.py  test_improvements.py  test_jailbreakbench.py  test_lightweight_sota.py  test_multilanguage.py  test_performance.py  (+12 more)
(+204 files in other folders)
