[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "ragwall"
version = "1.0.0"
description = "Pre-emptive defense against RAG prompt injection attacks"
readme = "README.md"
requires-python = ">=3.9"
keywords = [ "rag", "security", "prompt-injection", "llm", "ai-safety", "jailbreak-detection",]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "License :: OSI Approved :: Apache Software License", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Topic :: Security", "Topic :: Scientific/Engineering :: Artificial Intelligence", "Topic :: Software Development :: Libraries :: Python Modules",]
dependencies = []
[[project.authors]]
name = "Haske Labs"
email = "ronald@haskelabs.com"

[[project.maintainers]]
name = "Haske Labs"
email = "ronald@haskelabs.com"

[project.license]
text = "Apache-2.0"

[project.optional-dependencies]
dev = [ "pytest>=7.0",]

[project.urls]
Homepage = "https://github.com/haskelabs/ragwall"
Documentation = "https://github.com/haskelabs/ragwall#readme"
Repository = "https://github.com/haskelabs/ragwall"
Issues = "https://github.com/haskelabs/ragwall/issues"
Changelog = "https://github.com/haskelabs/ragwall/releases"

[tool.setuptools]
packages = [ "sanitizer", "sanitizer.jailbreak", "src", "src.api",]

[tool.black]
line-length = 100
target-version = [ "py39", "py310", "py311",]
include = "\\.pyi?$"
extend-exclude = "/(\n  # directories\n  \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | build\n  | dist\n)/\n"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools.package-data]
sanitizer = [ "jailbreak/pattern_bundles/*.json",]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [ "tests",]
python_files = [ "test_*.py",]
python_classes = [ "Test*",]
python_functions = [ "test_*",]
